# icarus-consumables

./: .ai-rules.md  .gitignore  .pyre_configuration  ANTIGRAVITY.md  CLAUDE.md  README.md  debug_index.py  debug_translation.py  main.py  pyproject.toml  unpacked_icarus_data
.agent/workflows/: run-parser.md  test.md  verify.md
data/: stat_metadata.json
data/overrides/: cakes_override.json  spelling_error.json  suppress_list.json
docs/: PROJECT_STRUCTURE.md  categories.md  software_design_document.md  updates.md
docs/formats/: consumable_data_object.md  modifier_data_object.md  recipe_data_object.md  tier_info_object.md
output/: consumables_data.json
overrides/: example_override.json  suppress_list.json
src/icarus_consumables/: app.py  parser.py
src/icarus_consumables/config/: processing_config.json
src/icarus_consumables/generators/: base.py  csv.py  json.py  markdown.py  ods.py
src/icarus_consumables/models/: consumable.py  item.py  modifier.py  recipe.py  tier.py
src/icarus_consumables/services/: category_service.py  consumable_parser.py  data_loader.py  farming_service.py  item_index.py  modifier_service.py  override_service.py  recipe_service.py  tier_mapper.py  translation.py
src/icarus_food/: app.py  parser.py
src/icarus_food/generators/: base.py  csv.py  json.py  markdown.py  ods.py
src/icarus_food/models/: consumable.py  modifier.py
src/icarus_food/services/: category_service.py  consumable_parser.py  data_loader.py  modifier_service.py  (+3 more)
tests/: test_recipe_matching.py  test_recipe_sets.py  test_tier_assignment.py  verify_integrity.py
(+1 files in other folders)
