[project]
name = "icarus-consumables"
version = "0.1.0"
description = "Icarus Consumables Data Generator - Parses game data to generate comprehensive consumable dataset"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [ # For ODS spreadsheet output
]

[project.urls]
Repository = "https://github.com/MikeSingularity/icarus-consumables"

[tool.hatch.build.targets.wheel]
packages = ["src/icarus_consumables"]

[tool.pyright]
include = ["src"]
extraPaths = ["src"]
executionEnvironments = [
  { root = "src" }
]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
